--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,5 +1,7 @@
 @tablet-width: 708px;
 @desktop-width: 1220px;
+@retina-dpi: 144dpi;
+@retina-dppx: 1.5dppx;
 
 @main-font: "Oswald", "Arial", sans-serif;
 @additional-font: "Arial", sans-serif;
