Дополняет ретинизацию и добавляет полифил Picturefill

--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -45,6 +45,8 @@
   position: absolute;
   top: 167px;
   left: 20px;
+  width: 280px;
+  height: 270px;
 }
 
 .intro__button {
@@ -100,6 +102,8 @@
     z-index: -1;
     top: 200px;
     left: 2px;
+    width: 709px;
+    height: 609px;
   }
 
   .intro__button {
@@ -132,6 +136,8 @@
     top: -80px;
     left: auto;
     right: 217px;
+    width: 552px;
+    height: 499px;
   }
 
   .intro__desktop-substrate {
