--- a/source/less/blocks/extra.less
+++ b/source/less/blocks/extra.less
@@ -72,6 +72,11 @@
   background-repeat: no-repeat;
 
   margin-bottom: 35px;
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../../img/gift-photo-mobile@2x.jpg");
+    background-size: 280px auto;
+  }
 }
 
 .stock__logo {
@@ -306,7 +311,11 @@
 
     background-image: url("../../img/gift-photo-desktop@1x.jpg");
     background-repeat: no-repeat;
-    background-size: 245px auto;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../../img/gift-photo-desktop@2x.jpg");
+      background-size: 245px auto;
+    }
   }
 
   .stock__logo {
