--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -24,6 +24,7 @@
 
 .page-header__logo {
   width: 191px;
+  height: 38px;
 
   cursor: pointer;
 }
@@ -196,6 +197,7 @@
 
   .page-header__logo {
     width: 173px;
+    height: 58px;
   }
 
   .main-nav__button {
@@ -238,7 +240,7 @@
   }
 
   .page-header__logo {
-    width: 203px;
+    width: 202px;
     height: 59px;
   }
 
