--- a/source/less/blocks/extra.less
+++ b/source/less/blocks/extra.less
@@ -297,7 +297,7 @@
   }
 
   .additional-list__order-button {
-    .tablet-button-green();
+    .tablet-button-green-small;
     font-size: 16px;
     line-height: 1.25;
     margin: 0;
