--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -1,3 +1,8 @@
+.program {
+  max-width: 280px;
+  margin: 0 auto;
+}
+
 .program__title {
   width: 280px;
 
@@ -6,8 +11,6 @@
   line-height: 1.67;
   font-weight: 400;
   color: @font-color-black;
-
-  padding: 0 20px;
 
   margin-top: 16px;
   margin-bottom: 24px;
@@ -21,8 +24,6 @@
   line-height: 1.3;
   text-transform: @text-transform;
   color: @font-color-black;
-
-  padding: 0 20px;
 
   margin-top: 0;
   margin-bottom: 39px;
@@ -40,7 +41,6 @@
 .additional-filter__list {
   .ul-config();
   width: 280px;
-  padding: 0 20px;
 }
 
 .cat-info__list {
@@ -183,7 +183,6 @@
 .additional-filter__title {
   .legend-config();
   width: 280px;
-  padding: 0 20px;
 }
 
 .owner-info__title {
@@ -271,7 +270,6 @@
 
 .about-cat {
   width: 280px;
-  padding: 0 20px;
   margin-bottom: 25px;
 }
 
