--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -4,6 +4,7 @@
 }
 
 .example__title {
+  max-width: 280px;
   font-family: @main-font;
   font-size: 36px;
   line-height: 1.67;
@@ -12,9 +13,8 @@
 
   padding-top: 17px;
   padding-bottom: 22px;
-  padding-left: 20px;
 
-  margin: 0;
+  margin: 0 auto;
 }
 
 .example__center-wrap {
@@ -202,10 +202,12 @@
   }
 
   .example__title {
+    max-width: 708px;
     font-size: 60px;
+
     line-height: 1;
+
     padding-bottom: 64px;
-    padding-left: 30px;
   }
 
   .example__center-wrap {
@@ -214,7 +216,8 @@
   }
 
   .example__stats-block {
-    padding: 0 30px;
+    max-width: 708px;
+    margin: 0 auto;
   }
 
   .example__description {
@@ -444,9 +447,12 @@
   }
 
   .example__title {
+    max-width: 1220px;
+
     padding-top: 0;
     padding-bottom: 74px;
-    padding-left: 110px;
+
+    margin: 0 auto;
   }
 
   .example__content {
@@ -472,7 +478,8 @@
   }
 
   .example__stats-block {
-    padding: 0;
+    max-width: 570px;
+    margin: 0;
   }
 
   .example__stats {
